Upgraded Python tests, still failing tough